--- a/Webp.html
+++ b/Webp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Modern Website</title>
-    <link rel="stylesheet" href="Webd.css">
+    <link rel="stylesheet" href="Wepd.css">
 </head>
 <body>
     <header>
